plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.latte'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	//implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.3.1'
	implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.7.6'  /* spring-security-crypto */

	implementation 'org.springframework.data:spring-data-commons:3.2.2'			// Spring Data 의 페이징 사용
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'	// SQL 로그 출력 시 파라미터 입력
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testImplementation 'org.springframework.security:spring-security-test'
	//implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	//implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	// JWT
	implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	//implementation 'org.apache.commons:commons-email:1.2'
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'


	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation group: 'org.bgee.log4jdbc-log4j2', name:'log4jdbc-log4j2-jdbc4.1', version: '1.16'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
